--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --height-default: 60px;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +17,7 @@ body{
 header{
     position: relative;
     width: 100%;
-    height: 60px;
+    height: var(--height-default);
     background-color: #333;
 }
 
@@ -32,11 +36,17 @@ nav ul{
     justify-content: center;
     align-items: center;
     list-style: none;
-    height: 60px;
+    height: var(--height-default);
     margin: auto;
 }
 
 ul li{
     position: relative;
     margin-right: 1em;
+}
+
+li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20pt;
 }
